--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,14 +46,14 @@
   <body>
     <div class="case">
       <div class="centrecase">
-        <a href="#" id="rss" ></a>
+        <a href="http://feeds.feedburner.com/LewisOaten" id="rss" ></a>
 
         <!--MAIN CONTENT -->
         {{ content }}
         <!--INFO SECTION -->
   
-        <a href="mailtophryz@gmail.com" id="footer">CONTACT ME</a>
-        <a id="logo" href="index.html"></a>
+        <a href="mailto://sphryz@gmail.com" id="footer">CONTACT ME</a>
+        <a id="logo" href="/"></a>
       </div>
       <a href="http://createinter.net" id="createint">webdesign by createinter.net</a>
     </div>
