Tweaked retweet CSS.

--- a/css/screen.css
+++ b/css/screen.css
@@ -258,24 +258,24 @@ a span.retweet {
   height: 16px;
   background-position: 0px 0px;
   background-image: url(/images/retweet.png);
+  background-repeat: no-repeat;
+  display: block;
+  float: left;
 }
 a:hover span.retweet {
-  width: 16px;
-  height: 16px;
   background-position: -16px 0px;
-  background-image: url(/images/retweet.png);
 }
 a span.reply {
   width: 16px;
   height: 16px;
   background-position: 0px 0px;
   background-image: url(/images/reply.png);
+  background-repeat: no-repeat;
+  display: block;
+  float: left;
 }
 a:hover span.reply:hover {
-  width: 16px;
-  height: 16px;
   background-position: -16px 0px;
-  background-image: url(/images/reply.png);
 }
 
 /*****************************************************************************/
