--- a/css/screen.css
+++ b/css/screen.css
@@ -265,6 +265,7 @@ a.retweet span {
   background-image: url(/images/retweet.png);
   background-repeat: no-repeat;
   display: block;
+  float: left;
 }
 a.retweet:hover span {
   background-position: -16px 0px;
@@ -281,6 +282,7 @@ a.reply span {
   background-image: url(/images/reply.png);
   background-repeat: no-repeat;
   display: block;
+  float: left;
 }
 a.reply:hover span {
   background-position: -16px 0px;
