--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,10 +55,15 @@ layout: default
 
     // Utilize the bit.ly API
     $.getJSON(daurl, function(data){
+        var url = "http://twitter.com/#search?q=" + data.results[defaults.longUrl].shortUrl + "&status=";
+        url += $('textarea#message').val() + " " + data.results[defaults.longUrl].shortUrl;
+
+        $('a.retweet').attr("href", url + "{% for tag in page.tags %} #{{ tag }}{% endfor %}");
+        $('a.retweet').show();
+
         // Setup comment box
         $('#tweetBtn').click( function() {
-          var url = "http://twitter.com/#search?q=" + data.results[defaults.longUrl].shortUrl + "&status=";
-          url += $('textarea#message').val() + " " + data.results[defaults.longUrl].shortUrl;
+          
           window.open(url);
         });
 
