--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,15 +56,14 @@ layout: default
     // Utilize the bit.ly API
     $.getJSON(daurl, function(data){
         var url = "http://twitter.com/#search?q=" + data.results[defaults.longUrl].shortUrl + "&status=";
-        url += $('textarea#message').val() + " " + data.results[defaults.longUrl].shortUrl;
 
-        $('a.retweet').attr("href", escape("RT @lewisoaten: {{ post.title }}{% for tag in page.tags %}+#{{ tag }}{% endfor %}" + url));
+        $('a.retweet').attr("href", url + escape("RT @lewisoaten: {{ post.title }}{% for tag in page.tags %} #{{ tag }}{% endfor %} ") + data.results[defaults.longUrl].shortUrl);
         $('a.retweet').show();
 
         // Setup comment box
         $('#tweetBtn').click( function() {
           
-          window.open(url);
+          window.open(url + $('textarea#message').val() + " " + data.results[defaults.longUrl].shortUrl;);
         });
 
         // Load comments
