--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,7 +63,7 @@ layout: default
         // Setup comment box
         $('#tweetBtn').click( function() {
           
-          window.open(url + $('textarea#message').val() + " " + data.results[defaults.longUrl].shortUrl;);
+          window.open(url + $('textarea#message').val() + " " + data.results[defaults.longUrl].shortUrl);
         });
 
         // Load comments
