Fixed mailto link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         {{ content }}
         <!--INFO SECTION -->
   
-        <a href="mailto://sphryz@gmail.com" id="footer">CONTACT ME</a>
+        <a href="mailto:sphryz@gmail.com" id="footer">CONTACT ME</a>
         <a id="logo" href="/"></a>
       </div>
       <a href="http://createinter.net" id="createint">webdesign by createinter.net</a>
