--- a/css/screen.css
+++ b/css/screen.css
@@ -9,7 +9,7 @@ body {
  background-image:url(/images/repeat.gif);
  }
 a, a:visited {
- color:#060;
+ color:#3c6600;
  text-decoration:none;
 }
 a:hover {
