--- a/css/screen.css
+++ b/css/screen.css
@@ -9,11 +9,15 @@ body {
  background-image:url(/images/repeat.gif);
  }
 a, a:visited {
- color:#3c6600;
+ color:#2d4d00;
+ text-decoration:underline;
+}
+h3 a, h3 a:visited {
+ color:#000;
  text-decoration:none;
 }
 a:hover {
- text-decoration:underline;
+ text-decoration:none;
 }
 .case {
  position:relative;
