--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
         <div id="blogsection">
           <span class="date"><strong>{{ page.date | date: "%d" }}</strong><em>{{ page.date | date: "%B" }}</em><a class="retweet" href="/"><span></span>Retweet</a></span>
           <div class="blogcontent">
-            <h3><a href="{{ post.url }}">{{ page.title }}</a></h3>
+            <h3>{{ page.title }}</h3>
             {{ content }}
           </div>
           <span id="blogtab"></span>
