--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
         <!--BLOG SECTION -->
         <div id="blogsection">
           <span class="date"><strong>{{ page.date | date: "%d" }}</strong><em>{{ page.date | date: "%B" }}</em><a class="retweet" href="/"><span></span>Retweet</a></span>
-          <div class="blogcontent">
+          <div class="homecontent">
             <h3>{{ page.title }}</h3>
             {{ content }}
           </div>
