--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -70,7 +70,7 @@ layout: default
         // Load comments
         $("#comment").html("");
         $("#comment").tweet({
-          username: ["lewisoaten"]
+          username: ["lewisoaten"],
           avatar_size: 32,
           count: 20,
           query: data.results[defaults.longUrl].shortUrl,
