--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,14 +12,15 @@ layout: default
         </div>
         <!--END BLOG SECTION -->
 
-<!-- <div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div> -->
+        <!--RELATED POSTS SECTION -->
+        {% for post in site.posts %}
+          <span class="date"><strong>{{ post.date | date: "%d" }}</strong><em>{{ post.date | date: "%B" }}</em></span>
+          <div class="homecontent">
+            <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+            <strong>{{ post.snippet }}</strong>
+          </div>
+        {% endfor %}
+        <!--END RELATED POSTS SECTION -->
         <!--COMMENT SECTION -->
         <div id="blogsection">
           <h2>Comments</h2>
