--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@ layout: default
 
         <!--RELATED POSTS SECTION -->
         <div id="blogsection">
+          <h2>Related Posts</h2>
           {% for post in site.posts %}
             <span class="date"><strong>{{ post.date | date: "%d" }}</strong><em>{{ post.date | date: "%B" }}</em></span>
             <div class="homecontent">
