--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
 
     <meta name="author" content="Lewis Oaten" />
-    <meta name="description" content="{{site.description}}" />
-    <meta name="keywords" content="{{site.keywords | join: ','}}" />
+    <meta name="description" content="{{page.description}}" />
+    <meta name="keywords" content="{{page.keywords | join: ','}}" />
     {% if page.date %}<meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />{% endif %}
     <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
 
@@ -28,7 +28,7 @@
       })();
     </script>
 
-    <title>{{site.main_title}}{% if page.title %} - {{page.title}}{% endif %}</title>
+    <title>{{page.main_title}}{% if page.title %} - {{page.title}}{% endif %}</title>
 
     <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
 
