--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,5 +57,21 @@
       </div>
       <a href="http://createinter.net" id="createint">webdesign by createinter.net</a>
     </div>
+    <!--BEGIN DISCUSS CODE -->
+    <script type="text/javascript">
+    //<![CDATA[
+    (function() {
+    	var links = document.getElementsByTagName('a');
+    	var query = '?';
+    	for(var i = 0; i < links.length; i++) {
+    	if(links[i].href.indexOf('#disqus_thread') >= 0) {
+    		query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+    	}
+    	}
+    	document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/lewisoaten/get_num_replies.js' + query + '"></' + 'script>');
+    })();
+    //]]>
+    </script>
+    <!--END DISCUSS CODE -->
   </body>
 </html>
