--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,19 +13,6 @@
     {% if page.date %}<meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />{% endif %}
     <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
 
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-XXXXX-X']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
-      })();
-    </script>
-
     <title>{{site.title}}{% if page.title %} - {{page.title}}{% endif %}</title>
 
     <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
@@ -42,6 +29,19 @@
     <!-- JQuery -->
     <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
     <script language="javascript" src="/scripts/jquery.tweet.js" type="text/javascript"></script>
+    
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-12523505-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+      })();
+    </script>
   </head>
   <body>
     <div class="case">
