--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <meta name="author" content="Lewis Oaten" />
     <meta name="description" content="{{site.description}}" />
-    <meta name="keywords" content="{{site.keywords | join: ','}}" />
+    <meta name="keywords" content="{{page.tags | join: ','}}" />
     {% if page.date %}<meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />{% endif %}
     <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
 
@@ -29,7 +29,7 @@
     <!-- JQuery -->
     <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
     <script language="javascript" src="/scripts/jquery.tweet.js" type="text/javascript"></script>
-    
+
     <!-- Google Analytics -->
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -51,7 +51,7 @@
         <!--MAIN CONTENT -->
         {{ content }}
         <!--INFO SECTION -->
-  
+
         <a href="mailto:sphryz@gmail.com" id="footer">CONTACT ME</a>
         <a id="logo" href="/"></a>
       </div>
